# ucare-26

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: extraction.yaml  model.yaml  models.yaml  probing.yaml  tasks.yaml
scripts/: run_probing_smoke_test.sh  run_smoke_test.sh
src/: __init__.py  models.py
src/data/: __init__.py  controls.py  loaders.py  synthetic.py  tasks.py
src/extraction/: __init__.py  cache.py  hooks.py  pipeline.py  pooling.py  smoke_test.py
src/metrics/: __init__.py  calibration.py  margins.py  prediction_depth.py
src/probing/: __init__.py  cross_validation.py  pipeline.py  plotting.py  probes.py  selectivity.py  smoke_test.py
tests/: __init__.py  conftest.py  test_cache.py  test_controls.py  test_cross_validation.py  test_hooks.py  test_loaders.py  test_metrics.py  test_models.py  test_pipeline.py  test_plotting.py  test_pooling.py  test_probes.py  test_probing_pipeline.py  test_probing_smoke_test.py  test_selectivity.py  test_smoke_test.py  test_synthetic.py  test_tasks.py
